# bussdcc-plants

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
src/bussdcc_plants/: cli.py  library.py  version.py
src/bussdcc_plants/config/: __init__.py  config.py  settings.py  store.py
src/bussdcc_plants/data/: seeds.json
src/bussdcc_plants/interface/web/: interface.py
src/bussdcc_plants/interface/web/blueprints/: resolver.py  settings.py
src/bussdcc_plants/interface/web/info/: plugin.py
src/bussdcc_plants/interface/web/info/templates/bussdcc_plants/info/: _components.jinja  _list.html  index.html  show.html
src/bussdcc_plants/interface/web/templates/: base.html
src/bussdcc_plants/interface/web/templates/settings/: index.html  new.html
src/bussdcc_plants/message/: config.py
src/bussdcc_plants/model/: __init__.py  plants.py
src/bussdcc_plants/process/: __init__.py  settings.py
src/bussdcc_plants/service/: __init__.py  config.py  library.py
